--- a/app/Resources/translations/messages.en.xliff
+++ b/app/Resources/translations/messages.en.xliff
@@ -1050,7 +1050,7 @@
                             <br>
                             <b>Eventansvariga</b><br> 
                             Elisabeth Rimér-Asplund, eventansvarig Stockholm<br> 
-                            Olivia Wideroth, teamledare eventansvariga Stockholm<br>                             
+                            Olivia Wideroth, teamledare eventansvariga Stockholm<br>
                         </p>
                     ]]>
                 </target>
@@ -1174,48 +1174,49 @@
             </trans-unit>
             <trans-unit id="open.confirm_meeting.header">
                 <source>open.confirm_meeting.header</source>
-                <target>Om mötet</target>
+                <target>About the meeting</target>
             </trans-unit>
             <trans-unit id="open.confirm_meeting.ingress">
                 <source>open.confirm_meeting.ingress</source>
-                <target>Vad roligt att vi på Kompisbyrån har fått matcha dig med en ny vän. Har ni träffats?</target>
+                <target>We at Kompisbyrån are happy that you wanted to take the chance and be matched up with a new friend.
+                    Now we would like to know if you have met with your new friend?</target>
             </trans-unit>
             <trans-unit id="open.confirm_meeting.button.met">
                 <source>open.confirm_meeting.button.met</source>
-                <target>Ja, vi har träffats</target>
+                <target>Yes, we have met</target>
             </trans-unit>
             <trans-unit id="open.confirm_meeting.button.not_yet_met">
                 <source>open.confirm_meeting.button.not_yet_met</source>
-                <target>Nej, inte än</target>
+                <target>No, not yet</target>
             </trans-unit>
             <trans-unit id="open.confirm_meeting.button.will_not_meet">
                 <source>open.confirm_meeting.button.will_not_meet</source>
-                <target>Nej, vi kommer inte att träffas</target>
+                <target>No, and we will not meet</target>
             </trans-unit>
             <trans-unit id="open.confirm_meeting.after.met">
                 <source>open.confirm_meeting.after.met</source>
-                <target>Tack för ditt svar och vad roligt att ni har träffats!
+                <target>Thank you for your answer and we are so happy to hear that you have met with your new friend!
 
-Om du inte redan har gjort det, skicka gärna ett foto från ert möte tillsammans med några meningar om vad ni gjorde och hur det var (med bådas samtycke). Maila hälsningen till oss på matchning@kompisbyran.se så delar vi den gärna digitalt. Eller hashtagga själv med #kompisbyrån. På så sätt kan du inspirera fler till att träffa nya vänner med Kompisbyrån.
+If you have not already done this, please send us a photo greeting from your meeting along with a couple of sentences about what you did and how it was (with approval from both of you). E-mail us the greeting at matchning@kompisbyran.se and we will share it digitally - this way you are able to inspire more people to take part in meeting new friends through Kompisbyrån.
 
-Om du vill träffa en ny kompis behöver du bara logga in på din profil och skicka in en ny förfrågan.
+If you want to get a new friend match, just log on to your profile and send in a new request. 
 
-Tack för att du är med och ökar gemenskapen i samhället!</target>
+Thank you for taking part in Kompisbyrån!</target>
             </trans-unit>
             <trans-unit id="open.confirm_meeting.after.not_yet_met">
                 <source>open.confirm_meeting.after.not_yet_met</source>
-                <target>Tack för ditt svar! Du kommer att få ett nytt mail från oss om några veckor där vi ställer samma fråga.</target>
-            </trans-unit>
+                <target>Thank you for your reply! You will recieve a new e-mail from us in a couple of weeks were we will ask you the same question.</target></trans-unit>
             <trans-unit id="open.confirm_meeting.after.will_not_meet">
                 <source>open.confirm_meeting.after.will_not_meet</source>
-                <target>Tack för ditt svar!
+                <target>Thank you for your reply!
 
-Om du vill, maila gärna oss på matchning@kompisbyran.se och berätta varför mötet inte blev av. Det är värdefullt för oss att få reda på detta eftersom vi alltid strävar efter att göra Kompisbyrån bättre.
+If you want to, send us an e-mail at matchning@kompisbyran.se and tell us why you didn't meet the person we matched you up with. This information is very valuable to us since we always strive to make Kompisbyrån better.
+
                 </target>
             </trans-unit>
             <trans-unit id="open.confirm_meeting.already_answered">
                 <source>open.confirm_meeting.already_answered</source>
-                <target>Du har redan besvarat denna fråga. Om du har fyllt i fel eller vill ändra ditt svar, vänligen maila oss på matchning@kompisbyran.se så hjälper vi till.</target>
+                <target> You have already answered this question. If you clicked the wrong button or want to change your reply, please e-mail us at matchning@kompisbyran.se and we will help you out.</target>
             </trans-unit>
         </body>
     </file>
