Better help text

--- a/app/Resources/translations/messages.ar.xliff
+++ b/app/Resources/translations/messages.ar.xliff
@@ -496,7 +496,7 @@
             </trans-unit>
             <trans-unit id="user.form.identity_number.help">
                 <source>user.form.identity_number.help</source>
-                <target>We need this to get government fundings.</target>
+                <target>We need this to get government fundings and doesn't use or share it in other purposes. Read more in Kompisbyrån's %linkStart%terms%linkEnd%.</target>
             </trans-unit>
             <trans-unit id="user.form.button">
                 <source>user.form.button</source>
