--- a/app/Resources/translations/messages.sv.xliff
+++ b/app/Resources/translations/messages.sv.xliff
@@ -497,7 +497,7 @@
             </trans-unit>
             <trans-unit id="user.form.identity_number.help">
                 <source>user.form.identity_number.help</source>
-                <target>Vi behöver detta för att få statliga bidrag för vår verksamhet.</target>
+                <target>Vi behöver detta för att få statliga bidrag och använder eller delar det inte i något annat syfte. Läs mer om detta i Kompisbyråns %linkStart%villkor%linkEnd%.</target>
             </trans-unit>
             <trans-unit id="user.form.button">
                 <source>user.form.button</source>
