Update to current partner organizations

--- a/app/Resources/translations/messages.sv.xliff
+++ b/app/Resources/translations/messages.sv.xliff
@@ -994,28 +994,20 @@
                         </p>
 
                         <h3>Tack till...</h3>
+                        
+                        <p>
+                            <strong>Axfoundation</strong> som via initiativet ÖppnaDörren är vår huvudpartner. Syftet med samarbetet 
+                            är att med gemensam kraft få ännu fler nya och etablerade svenskar att mötas under enkla, roliga och 
+                            vardagliga möten. Kompisbyråns verksamhet går helt i linje med ÖppnaDörrens övriga initiativ, där alla 
+                            arbetar med att länka samma nya och etablerade svenskar i ett möte på ungefär en timme.
+                        </p>
                         <p>
                             <strong>Delicato</strong> som är vår huvudsponsor till Fikakompis! Tillsammans vill vi verka för ökad 
-                            integration i det svenska samhället genom att fika. 
+                            gemenskap i det svenska samhället genom fika. 
                         </p>
                         <p>
-                            <strong>Svenska Postkodstiftelsen</strong> som stöttar Kompisbyrån. Tack vare detta
-                            bidrag har vi fått möjlighet att effektivisera vårt arbete genom att bl.a. utveckling av datasystem och hemsida.
-                        </p>
-                        <p>
-                            <strong>Sigtunastiftelsen</strong> som belönat Kompisbyrån med <a
-                                href="http://www.sigtunastiftelsen.se/kompisbyran-far-abrahams-barns-pris-2015/"
-                                target="_blank"
-                            >Abrahams Barns pris</a>, med motiveringen att Kompisbyrån skapar förutsättningar
-                            för mötesplatser i vardagen där ett kulturellt utbyte kan ske mellan personer som
-                            annars inte skulle ha träffats. “Vi vill därför uppmuntra initiativ som Kompisbyrån eftersom de,
-                            liksom Abrahams Barn, önskar delta i byggandet av ett inkluderande samhälle”, säger Elisabet
-                            Mattizon Armgard, programsekreterare för Abrahams Barn.
-                        </p>
-                        <p>
-                            <strong>Lernia</strong> som stöttar Kompisbyråns arbete med att göra det enklare för människor med liknande intressen att
-                            mötas och träffa nya vänner i vardagen. I och med detta har vi möjlighet att nå ut till fler som
-                            vill träffa nya kompisar.
+                            <strong>Startkompis-kommunerna</strong> Nacka, Solna, Tyresö och Vaxholm som valt att samarbeta med oss
+                            för att öka gemenskapen lokalt i kommunerna genom vårt program Startkompis.
                         </p>
                         
                         <h3>Ett särskilt tack till...</h3>
