Update of current partners

--- a/app/Resources/translations/messages.en.xliff
+++ b/app/Resources/translations/messages.en.xliff
@@ -919,21 +919,25 @@
                             hesitate to contact: emma@kompisbyran.se or kontakt@kompisbyran.se.
                         </p>
                         <p>
-                            Many thanks to you all who are involved and really make a difference! 
+                            Many thanks to all of you that are involved and really make a difference! 
                         </p>
 
                         <h3>Thanks to...</h3>
+
                         <p>
-                            <strong>Delicato</strong>, our main partner for ”Fikakompis”. Together we want to increase the integration in the Swedish society by connecting new friends over a ”fika”.  
+                            <strong>Axfoundation</strong> our main partner through the initiative ÖppnaDörren. The purpose of this 
+                             collaboration is to get even more new and established Swedes to meet in easy and fun ways as part of everyday 
+                             life. The work of Kompisbyrån is very well aligned with the rest of the organizations that are part of ÖppnaDörren, 
+                             we all work to create those first meetings between potential new friends.
+                        </p>
+                        <p>
+                            <strong>Delicato</strong>, our main sponsor for ”Fikakompis”. Together we want to increase the integration in the Swedish society 
+                             by connecting new friends over a ”fika”.  
                         </p>   
                         <p>
-                            <strong>Svenska Postkodstiftelsen</strong> 
-                        </p>
-                        <p>
-                            <strong>Sigtunastiftelsen</strong> which awarded Kompisbyrån with "Abrahams barns pris" 
-                        </p>
-                        <p>
-                            <strong>Lernia</strong> 
+                            <strong>The municipalities</strong> Nacka, Solna, Tyresö and Vaxholm which we are working with in our program Startkompis 
+                                    (Start Friend). Together we want to provide e greater sense of community by making local friend matches within
+                                    the municipalities. 
                         </p>
                         
                         <h3>A special thanks to...</h3>
