Update to current partners

--- a/app/Resources/translations/messages.ar.xliff
+++ b/app/Resources/translations/messages.ar.xliff
@@ -920,16 +920,13 @@
 
                         <h3>شكرا ل</h3>
                         <p>
-                            <strong>Delicato</strong> 
+                            <strong>Axfoundation/ÖppnaDörren</strong> 
                         </p>
                         <p>
-                            <strong>Svenska Postkodstiftelsen</strong>
+                            <strong>Delicato</strong>
                         </p>
                         <p>
-                            <strong>Sigtunastiftelsen</strong> 
-                        </p>
-                        <p>
-                            <strong>Lernia</strong> 
+                            <strong>The Start Friend municipalities:</strong> Nacka, Solna, Tyresö and Vaxholm. 
                         </p>
                         <p>
                             شكر خاص ل
