--- a/app/Resources/translations/messages.en.xliff
+++ b/app/Resources/translations/messages.en.xliff
@@ -650,13 +650,6 @@
                             Kompisbyrån recommends that you meet for about 1 hour at a public place in the central part of that city that you have chosen. 
                         </li>
                         <li>
-                            When you have registered your application, you warrant that your information is correct and agree that the information: 
-                            may be treated according to PUL and is saved in Kompisbyrån's register so that we can find new friends for you, that 
-                            your information, e-mail and telephone number are sent to your new friend, and that we will invite you to Kompisbyrån's activities or 
-                            offerings. If you want to adjust your submitted information that is registered, please log in with your e-mail and 
-                            password and update your profile. Controller of personal data is Kompisbyrån’s Board.
-                        </li>
-                        <li>
                             Our ambition is to find a new friend for you within 30 days. That means that you may have to wait.
                         </li>
                         <li>
@@ -686,6 +679,15 @@
                         </li>
                         <li>
                             We wish to constantly improve our work. Therefore, we will contact you after your meeting to follow up.
+                        </li>
+                        <li>
+                            Kompisbyrån collects the personal information that you have provided in your profile. We use this information to help you get in contact with other participants in our organization. We might also use your contact details to invite you to Kompisbyrån’s activities and other types of offers. The information you leave at Kompisbyrån is also being used to answer questions, operate and improve our homepage and programmes. If you would like to change the information you have provided, please log on to your profile to make the changes in question. Controller of personal data is Kompisbyrån’s Board.
+                        </li>
+                        <li>
+                            Information on you might be transferred to partners that help us provide our services and to authorities that give us Government Grants to run Kompisbyrån. Our partners do not have the rights to use this information for other purposes. We do not transfer your personal information to partner organizations for promotional purposes without your consent.
+                        </li>
+                        <li>
+                            When you register at our homepage and when you apply for friend matches, you agree to Kompisbyrån processing your personal data for the purposes stated.
                         </li>
                     </ul>]]></target>
             </trans-unit>
