--- a/app/Resources/translations/messages.sv.xliff
+++ b/app/Resources/translations/messages.sv.xliff
@@ -645,13 +645,6 @@
                             Kompisbyrån rekommenderar att ni träffas ungefär 1 timme på ett offentligt ställe i stadens centrala del.
                         </li>
                         <li>
-                            När du har registrerat din ansökan garanterar du att din information är korrekt och godkänner att informationen; 
-                            kan komma att behandlas enligt PUL och hamnar i Kompisbyråns register så att vi kan hitta nya kompisar till dig, 
-                            att din information, email och telefonnummer skickas till din nya kompis, och att vi bjuder in dig till Kompisbyråns 
-                            aktiviteter eller erbjudanden. Om du vill korrigera dina lämnade uppgifter som finns registrerade hos oss, vänligen 
-                            logga in med din email och ditt lösenord och uppdatera din profil. Personuppgiftsansvarig är Kompisbyråns styrelse.
-                        </li>
-                        <li>
                             Vår ambition är att hitta en ny kompis till dig inom 30 dagar. Det innebär att du kan få vänta.
                         </li>
                         <li>
@@ -683,6 +676,15 @@
                         </li>
                         <li>
                             Vi vill hela tiden bli bättre på vårt arbete. Därför kontaktar vi dig efter ert möte för att fråga hur det var.
+                        </li>
+                        <li>
+                            Kompisbyrån samlar in personuppgifter om dig som du lämnar i samband med din registrering. Vi använder informationen i syfte att hjälpa dig att komma i kontakt med deltagare inom vår verksamhet. Vi kan också komma att bjuda in dig till Kompisbyråns aktiviteter eller erbjudanden. Informationen används också för att kunna besvara frågor, driva och förbättra vår webbplats och program. Om du vill korrigera dina lämnade uppgifter som finns registrerade hos oss, vänligen logga in med din email och ditt lösenord och uppdatera din profil. Personuppgiftsansvarig är Kompisbyråns styrelse.
+                        </li>
+                        <li>
+                            Uppgifter om dig kan komma att överföras till samarbetspartners som hjälper oss att erbjuda dig våra tjänster samt till myndigheter som ger oss statliga bidrag. Våra samarbetspartners har inte rätt att använda uppgifter om dig i annat syfte. Vi överför inte uppgifter till samarbetspartners för marknadsföringssyfte utan ditt medgivande.
+                        </li>
+                        <li>
+                            När du registrerar dig på vår webbplats och när du gör förfrågningar om att bli matchad med nya vänner samtycker du till att Kompisbyrån behandlar dina personuppgifter för de ändamål som anges.
                         </li>
                     </ul>]]></target>
             </trans-unit>
