--- a/app/Resources/translations/messages.ar.xliff
+++ b/app/Resources/translations/messages.ar.xliff
@@ -661,13 +661,13 @@
                             نحن نريد دوما أن نكون أفضل فيما نفعله لذلك سوف نرسل لك بريدا الكترونياأو نتصل بك لنسألك كيف جرت الأمور و كيف كان اللقاء.
                         </li>
                         <li>
-                            Kompisbyrån collects the personal information that you have provided in your profile. We use this information to help you get in contact with other participants in our organization. We might also use your contact details to invite you to Kompisbyrån’s activities and other types of offers. The information you leave at Kompisbyrån is also being used to answer questions, operate and improve our homepage and programmes. If you would like to change the information you have provided, please log on to your profile to make the changes in question. Controller of personal data is Kompisbyrån’s Board.
+                            كومبيسبيرون يجمع المعلومات الشخصية التي قمت بتقديمها في ملفك الشخصي. نستخدم هذه المعلومات لمساعدتك في التواصل مع المشاركين الآخرين في مؤسستنا. قد نستخدم أيضا تفاصيل الاتصال الخاصة بك لدعوتك لأنشطة كومبيسبيرون وغيرها من أنواع العروض. كما يتم استخدام المعلومات التي تتركها في كومبيسبيرون للإجابة على الأسئلة وتشغيل وتحسين الصفحة الرئيسية والبرامج. إذا كنت ترغب في تغيير المعلومات التي قدمتها، يرجى تسجيل الدخول إلى ملفك الشخصي لإجراء التغييرات المعنية. مراقب البيانات الشخصية هو مجلس إدارة كومبيسبيرون. 
                         </li>
                         <li>
-                            Information on you might be transferred to partners that help us provide our services and to authorities that give us Government Grants to run Kompisbyrån. Our partners do not have the rights to use this information for other purposes. We do not transfer your personal information to partner organizations for promotional purposes without your consent.
+                            قد يتم نقل المعلومات الخاصة بك إلى الشركاء التي تساعدنا على تقديم خدماتنا وإلى السلطات التي تعطينا المنح الحكومية لتشغيل كومبيسبيرون. ليس لدى شركائنا الحق في استخدام هذه المعلومات لأغراض أخرى. نحن لا ننقل المعلومات الشخصية الخاصة بك إلى المنظمات الشريكة لأغراض ترويجية دون موافقتك.
                         </li>
                         <li>
-                            When you register at our homepage and when you apply for friend matches, you agree to Kompisbyrån processing your personal data for the purposes stated.
+                            عند التسجيل في صفحتنا الرئيسية وعند التقدم بطلب للحصول على مطابقة صديق، فإنك توافق على معالجة كومبيسبيرون للبيانات الشخصية الخاصة بك للأغراض المذكورة.
                         </li>
                     </ul>
                     ]]></target>
