Korrigering av aktiva + stavfel

--- a/app/Resources/translations/messages.sv.xliff
+++ b/app/Resources/translations/messages.sv.xliff
@@ -1116,10 +1116,8 @@
                             Alexander Unge, ambassadör matchning<br> 
                             <br>
                             <b>Eventansvariga</b><br>
-                            Mari Multamäki, eventansvarig Stockholm<br> 
                             Elisabeth Rimér-Asplund, eventansvarig Stockholm<br> 
-                            Maria Waldekranz, eventansvarig Stockholm<br> 
-                            Oliva Wideroth, teamledare eventansvariga Stockholm<br> 
+                            Olivia Wideroth, teamledare eventansvariga Stockholm<br> 
                         </p>
                     ]]>
                 </target>
